# caitlyn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SIMDConfig.cmake  instances.h  intersects.h  main.cc  perlin.h  scene.cc  scene.h
.devcontainer/: devcontainer.json
include/: CLIParser.h  CSRParser.h  base.h  box_primitive.h  camera.h  device.h  instances.h  output.h  primitive.h  quad_primitive.h  render.h  scene.h
include/intersection/: hit_info.hh  hitinfo.h  intersects.h
include/materials/: material.h  perlin.h  texture.h
include/objects/: base.h  camera.h  geometry.h  light.h  primitive.h  visual.h
include/objects/primitives/: box_primitive.h  quad_primitive.h  sphere_primitive.h
include/output/: color.h  output.h  png_output.h
include/parsers/: CLIParser.h  CSRParser.h  cli_parser.hh  csr_parser.hh
include/util/: device.h  general.h  image.hh  instances.h  ray.h  rtw_stb_image.h
scripts/: compile.sh  tests.sh
src/: render.cc  scene.cc
src/intersection/: hit_info.cc  hitinfo.cc  intersects.cc
src/materials/: material.cc  perlin.cc  texture.cc
src/objects/: base.cc  camera.cc  geometry.cc  light.cc  primitive.cc  visual.cc
src/objects/primitives/: box_primitive.cc  quad_primitive.cc  sphere_primitive.cc
src/output/: color.cc  output.cc  png_output.cc
src/parsers/: CLIParser.cc  CSRParser.cc  cli_parser.cc  csr_parser.cc
src/util/: device.cc  general.cc  image.cc  instances.cc  ray.cc  rtw_stb_image.cc
tests/: cornell_box.csr  earth.csr  instances.csr  kylo.csr  quads.csr  simple_light.csr  tests.sh  two_perlin_spheres.csr  two_spheres.csr
tools/: tests.sh
